# ffui

./: .gitignore  .jscpd.backend.json  .jscpd.frontend.json  .jscpd.rust.json  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts  vite.perf-audit.config.ts  vitest.config.ts  vitest.setup.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  rustfmt.toml  split_engine.py  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: smart-presets.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_exit.rs  elevation_shim.rs  lib.rs  lib_tests.rs  main.rs  process_ext.rs  queue_events.rs  single_instance.rs  sync_ext.rs  system_metrics.rs  taskbar_progress.rs  test_support.rs  window_offscreen.rs
src-tauri/src/commands/: app_exit.rs  data_root.rs  job_compare.rs  mod.rs  output.rs  presets.rs  queue.rs  settings.rs  tools.rs  ui_fonts.rs  ui_fonts_catalog.rs  ui_fonts_downloads.rs  ui_fonts_import.rs  ui_fonts_system.rs  ui_fonts_types.rs  updater.rs
src-tauri/src/commands/job_compare/: commands.rs  helpers.rs  tests.rs  types.rs
src-tauri/src/commands/tools/: fallback_preview.rs  playable_media.rs  preview_cache.rs  reveal.rs
src-tauri/src/ffui_core/: bench.rs  compare_preview.rs  config_bundle.rs  domain.rs  engine.rs  fallback_preview.rs  ffprobe.rs  input_expand.rs  mod.rs  monitor.rs  monitor_activity.rs  network_proxy.rs  network_proxy_tests.rs  preset_bundle.rs  preview_cache.rs  preview_common.rs  settings.rs  shutdown_marker.rs  taskbar_progress_delta.rs  taskbar_progress_delta_tests.rs  template_validation.rs  template_validation_sample_mp4.rs  tools.rs
src-tauri/src/ffui_core/compare_preview/: cache.rs  tests.rs
src-tauri/src/ffui_core/data_root/: meta.rs  migration.rs  mod.rs  resolve.rs  tests.rs
src-tauri/src/ffui_core/domain/: batch_compress.rs  config.rs  job.rs  job_lite.rs  job_logs.rs  job_record.rs  job_ui_lite.rs  mod.rs  output_policy.rs  preset.rs  queue_startup_hint.rs  smart_scan.rs  tests.rs
src-tauri/src/ffui_core/domain/job_lite/: ui_lite.rs
src-tauri/src/ffui_core/engine/: bench.rs  engine_facade_extras.rs  enqueue_bulk.rs  file_times.rs  job_runner.rs  job_runner_media_and_logging.rs  job_runner_paths_and_preview.rs  job_runner_preview_thumbnails.rs  job_runner_process.rs  job_runner_process_execute.rs  job_runner_process_execute_finalize.rs  job_runner_process_execute_replace_original.rs  job_runner_process_execute_resume_support.rs  job_runner_process_execute_success_finalize.rs  job_runner_process_prepare.rs  job_runner_process_prepare_plan_resume_paths.rs  job_runner_process_prepare_resume.rs  job_runner_process_resume_utils.rs  job_runner_progress.rs  job_runner_state.rs  job_runner_time_and_batch_compress.rs  job_runner_time_and_smart_scan.rs  listeners.rs  mod.rs  os_paths.rs  output_policy_paths.rs  preview_cache_gc.rs  preview_refresh.rs  segment_discovery.rs  settings_api.rs  settings_save.rs  state.rs  state_persist.rs  state_persist_test_support.rs  template_args.rs  test_mutex.rs  tools_refresh.rs  transcode_activity.rs  ui_lite.rs  vmaf.rs  (+2 more)
src-tauri/src/ffui_core/engine/batch_compress/: audio.rs  detection.rs  helpers.rs  image.rs  image_encode_avif.rs  mod.rs  orchestrator.rs  orchestrator_helpers.rs  video.rs  (+2 more)
src-tauri/src/ffui_core/fallback_preview/: cache.rs  tests.rs
src-tauri/src/ffui_core/preview_cache/: tests.rs
src-tauri/src/ffui_core/settings/: app_settings.rs  app_settings_resume.rs  io.rs  mod.rs  monitor_updater_types.rs  preset_templates.rs  presets.rs  proxy.rs  smart_presets.rs  smart_presets_cpu.rs  tests.rs  tool_probe_cache.rs  types.rs
src-tauri/src/ffui_core/template_validation/: tests.rs
src-tauri/src/ffui_core/tools/: candidates.rs  discover.rs  ffmpeg_capabilities.rs  mod.rs  probe.rs  probe_fast.rs  resolve.rs  runtime_state.rs  status.rs  tests.rs  tests_async_refresh.rs  tests_manager.rs  tests_probe.rs  tests_runtime.rs  tests_runtime_clear_error.rs  tests_runtime_progress.rs  tests_versioning.rs  types.rs
src-tauri/src/queue_events/: tests.rs
src-tauri/src/single_instance/: tests.rs  windows_focus.rs
src-tauri/src/system_metrics/: tests.rs
src-tauri/src/taskbar_progress/: lite.rs  ui_lite.rs
src-tauri/src/transcoding/: domain.rs  engine.rs  mod.rs  settings.rs  tools.rs
src-tauri/tests/: capabilities_dialog_save.rs  ffmpeg-command-contract.json  ffmpeg-command-corpus.fixture.json  ffmpeg-command-corpus.strict.json  ffui_mock_ffmpeg.rs  line_length_guard.rs  mock_ffmpeg.md  tauri_csp_contract.rs
tools/bench/: Cargo.toml
(+1052 files in other folders)
