[package]
name = "ffui"
version = "0.3.0"
description = "A Tauri App"
authors = ["muyuanjin"]
edition = "2024"
default-run = "ffui"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ffui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.4.2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
fs2 = "0.4"
sysinfo = "0.30"
nvml-wrapper = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
base64 = "0.22.1"
once_cell = "1"
trash = "5"
regex = "1"
filetime = "0.2"
tauri-plugin-os = "^2"
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "rt"] }
tempfile = "3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2.0.0"

[target.'cfg(all(not(windows), not(any(target_os = "android", target_os = "ios"))))'.dependencies]
font-kit = "0.14"


[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Registry",
    "Win32_System_JobObjects",
    "Win32_System_Com",
    "Win32_Graphics_DirectWrite",
    "Win32_Globalization",
] }
everything-sdk = { version = "0.0.6" }

[dev-dependencies]

[features]
bench = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
debug = 0
incremental = false

[profile.check-all]
inherits = "dev"
debug = 0
incremental = false

[[test]]
name = "ffui_mock_ffmpeg"
path = "tests/ffui_mock_ffmpeg.rs"
harness = false

[[bin]]
name = "ffui"
path = "src/main.rs"
